2023-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (ansi-color): Require.

	* tramp.el (tramp-shell-prompt-pattern): Remove escape characters.
	(tramp-process-one-action, tramp-convert-file-attributes):
	Use `ansi-color-control-seq-regexp'.  (Bug#63539)

	* tramp-sh.el (tramp-display-escape-sequence-regexp)
	(tramp-device-escape-sequence-regexp): Delete.
	(tramp-sh-handle-insert-directory, tramp-barf-if-no-shell-prompt)
	(tramp-wait-for-output): Use `ansi-color-control-seq-regexp'.

2023-05-17  Mattias Engdegård  <mattiase@acm.org>

	Eliminate some mutation of program constants

	* tramp.el (tramp-handle-memory-info): Work on newly created
	objects, or use non-destructive operations.

2023-05-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-crypt.el (tramp-crypt-handle-file-exists-p): New defun.
	(tramp-crypt-file-name-handler-alist): Add it.

	* tramp-smb.el (tramp-smb-handle-copy-file): Flush proper file
	properties.

2023-05-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (initialize): Ignore D-Bus errors.

2023-05-09  Benson Chu  <bensonchu457@gmail.com>  (tiny change)

	* tramp-sh.el (tramp-ssh-controlmaster-options): Should never
	return nil, but empty string.

2023-05-05  Mattias Engdegård  <mattiase@acm.org>

	* tramp-sh.el (tramp-sh-handle-insert-directory): Test whether -N
	is understood by ls since that option is used along with --dired.
	Remove -N when we remove --dired.  (Bug#63142)

2023-05-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-to-file): Fix docstring.
	(tramp-wrong-passwd-regexp): Add "Authentication failed" string
	(from doas).
	(tramp-debug-message): Comment thread insertion.  Simplify
	backtrace check.
	(tramp-mutex, tramp-get-mutex): Remove.
	(tramp-file-name-handler): Don't handle threads.
	(with-tramp-locked-connection): Suppress timers.  (Bug#49954, Bug60534)

	* tramp-cache.el (tramp-cache-print): Don't check for `mutexp'.

	* tramp-compat.el (xdg): Require.